# finks-data-architecture

./: .gitignore  404.html  data-pipeline-architecture.md  data-pipeline-diagrams.mmd  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: deploy.yml
0.1.0/: index.html
0.1.0/architecture-overview/: index.html
0.1.0/data-lake-architecture/: index.html
0.1.0/detailed-flow/: index.html
0.1.0/infrastructure-as-code/: index.html
0.1.0/monitoring-observability/: index.html
0.1.0/repositories/: index.html
0.2.0/: 404.html  sitemap.xml
0.2.0/core-components/: index.html
0.2.0/cost-optimization/: index.html
0.2.0/environment-management/: index.html
0.2.0/search/: search_index.json
0.2.0/security-architecture/: index.html
0.2.0/service-architecture/: index.html
0.2.0/stylesheets/: gruvbox.css
0.2.0/technology-decisions/: index.html
0.2.0/technology-stack/: index.html
0.2.0/transformation-layer/: index.html
architecture-overview/: index.html
core-components/: index.html
cost-optimization/: index.html
data-lake-architecture/: index.html
detailed-flow/: index.html
docs/: index.md  infrastructure-as-code.md
docs/detailed-flow/: index.md
environment-management/: index.html
infrastructure-as-code/: index.html
monitoring-observability/: index.html
repositories/: index.html
search/: search_index.json
security-architecture/: index.html
service-architecture/: index.html
technology-decisions/: index.html
technology-stack/: index.html
transformation-layer/: index.html
(+49 files in other folders)
