[project]
name = "finks-data-architecture-docs"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "pymdown-extensions",
    "beautifulsoup4",
    "mkdocs-roamlinks-plugin",
    "mkdocs-rss-plugin",
    "mkdocs-section-index",
    "mkdocs-with-pdf",
    "lxml",
    "mike",
    "git-notion==0.2.4",
    "urllib3<2.0",
]
